[package]
name = "builders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maze = { path = "../maze" }
monitor = { path = "../monitor" }
print = { path = "../print" }
rand = "0.8.5"
crossterm = "0.26.1"
ratatui = "0.24"

