[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maze = { path = "../maze" }
monitor = { path = "../monitor" }
tables = { path = "../tables" }
print = { path = "../print" }
crossterm = "0.26.1"
rand = "0.8.5"
ctrlc = "3.4.0"
crossbeam-channel = "0.5"

