[package]
name = "run_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maze = { path = "../maze" }
builders = { path = "../builders" }
solvers = { path = "../solvers" }
painters = { path = "../painters" }
tables = { path = "../tables" }
print = { path = "../print" }
speed = { path = "../speed" }
crossterm = "0.27"
ratatui = "0.24"
tui-textarea = "0.3"
rand = "0.8.5"
ctrlc = "3.4.0"
crossbeam-channel = "0.5"
