[package]
name = "run_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maze = { path = "../maze" }
builders = { path = "../builders" }
solvers = { path = "../solvers" }
monitor = { path = "../monitor" }
tables = { path = "../tables" }
print = { path = "../print" }
crossterm = "0.27"
ratatui = "0.24"
tui-textarea = "0.3"
rand = "0.8.5"
crossbeam-channel = "0.5"
