[package]
name = "solvers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maze = { path = "../maze" }
monitor = { path = "../monitor" }
builders = { path = "../builders" }
print = { path = "../print" }
crossterm = "0.26.1"
rand = "0.8.5"
ratatui = "0.24"
