[package]
name = "tables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maze = { path = "../maze" }
monitor = { path = "../monitor" }
solvers = { path = "../solvers" }
builders = { path = "../builders" }
painters = { path = "../painters" }
rand = "0.8.5"
